--- a/assets/styles/frontend/common/components/box/preview.less
+++ b/assets/styles/frontend/common/components/box/preview.less
@@ -2,13 +2,32 @@
 @box-preview-width: @box-order-cart-width;
 @box-preview-gap: 90px;
 
-@box-preview-coupone-code-button-width: 92px;
-
 .box-preview {
     &__content {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        flex-direction: column;
+        margin-bottom: 20px;
+
+        @media @query-lg {
+            flex-direction: row;
+            justify-content: space-between;
+            margin-bottom: 40px;
+        }
+    }
+
+    &__item {
+        margin-bottom: 20px;
+
+        @media @query-lg {
+            margin-bottom: 0;
+        }
+
+        &--total {
+            @media @query-lg {
+                width: 400px;
+                padding-left: 20px;
+            }
+        }
     }
 
     &__action {
@@ -17,34 +36,62 @@
 
     &__coupone {
         display: flex;
-        flex-direction: row;
-        align-items: center;
+        flex-direction: column;
+
+        @media @query-md {
+            flex-direction: row;
+            align-items: center;
+        }
 
         &__title {
             line-height: 18px;
             margin-right: 20px;
+            margin-bottom: 10px;
 
             font-size: 16px;
             font-weight: 700;
             color: @color-base;
             text-transform: uppercase;
+
+            @media @query-md {
+                margin-bottom: 0;
+            }
         }
 
         &__code {
             display: flex;
             flex-direction: row;
+            padding: 5px;
+
+            border: 1px solid @color-border-dark;
+            border-radius: @radius-medium;
+            box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
 
             &__input {
-                width: calc(~"100% - @{box-preview-coupone-code-button-width}");
-                
-                border-right: 0;
-                border-radius: @radius-small 0 0 @radius-small;
-            }
+                height: 31px;
 
-            &__button {
-                width: @box-preview-coupone-code-button-width;
+                border: 0;
+                box-shadow: none;
 
-                border-radius: 0 @radius-small @radius-small 0;
+                &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+                    opacity: 1;
+                }
+
+                &::-moz-placeholder { /* Firefox 19+ */
+                    opacity: 1;
+                }
+
+                &:-ms-input-placeholder { /* IE 10+ */
+                    opacity: 1;
+                }
+
+                &:-moz-placeholder { /* Firefox 18- */
+                    opacity: 1;
+                }
+
+                &:focus {
+                    border: 0;
+                }
             }
         }
     }
