--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -78,8 +78,10 @@
                             </td>
                         </tr>
                     {% endif %}
+                    {% set promocodeActive = false %}
                     {% for promoCodeId, promoCode in orderPreview.promoCodesIndexedById %}
                         {% if orderPreview.getTotalItemDiscountsIndexedByPromoCodeId[promoCodeId] is defined %}
+                            {% set promocodeActive = true %}
                             <tr class="table-cart-preview__row">
                                 <td class="table-cart-preview__cell">
                                     {{ 'Sleva'|trans }}
@@ -129,10 +131,10 @@
 
             <div id="js-order-preview-total-price" class="table-cart-preview table-cart-preview--without-gap">
                 <div class="table-cart-preview__total">
-                    {% if orderPreview.activeOrderDiscountLevel is not null %}
+                    {% if orderPreview.activeOrderDiscountLevel is not null or promocodeActive %}
                         <span class="table-cart-preview__total__discount js-not-implemented-yet">Ušetříte 3 175 Kč</span>
                     {% endif %} 
-                    <span class="table-cart-preview__total__price-primary {% if orderPreview.activeOrderDiscountLevel is not null %}table-cart-preview__total__price-primary--colored{% endif %}">
+                    <span class="table-cart-preview__total__price-primary {% if orderPreview.activeOrderDiscountLevel is not null or promocodeActive %}table-cart-preview__total__price-primary--colored{% endif %}">
                         {{ orderPreview.totalPrice.priceWithVat|price }}
                     </span>
                 </div>
