--- a/assets/styles/frontend/common/layout/header/contact-us.less
+++ b/assets/styles/frontend/common/layout/header/contact-us.less
@@ -12,14 +12,24 @@
 
     &--everytime-visible {
         display: flex;
+        flex-direction: column;
+
+        @media @query-sm {
+            flex-direction: row;
+        }
     }
 
     &__open-hours {
         display: none;
         opacity: 0.7;
+        margin-bottom: 10px;
 
         font-size: @font-size-extra-small;
         color: @color-f;
+
+        @media @query-sm {
+            margin-bottom: 0;
+        }
 
         @media @query-xl {
             display: block;
@@ -33,12 +43,15 @@
     &__phone {
         display: flex;
         align-items: center;
-        margin-left: 16px;
 
         color: @color-f;
         font-size: @font-size;
         font-weight: 700;
         text-decoration: none;
+
+        @media @query-sm {
+            margin-left: 16px;
+        }
 
         &:hover {
             text-decoration: none;
