design: edit css issues

--- a/assets/styles/frontend/common/components/in/availability.less
+++ b/assets/styles/frontend/common/components/in/availability.less
@@ -97,6 +97,10 @@
             font-weight: 400;
         }
 
+        .table-cart & {
+            font-weight: 400;
+        }
+
         &--not-available {
             color: @color-blue-dark;
         }
