--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -79,27 +79,29 @@
                                                 {{ cartItemPrice.unitPrice.priceWithVat|price }}
                                             </div>
                                             <div class="table-cart__cell table-cart__cell--spinbox js-spinbox-parent">
-                                                <span class="form-input-spinbox form-input-spinbox--secondary js-spinbox">
-                                                    {% if cartItem.saleItem %}
-                                                        {% set maxQuantity = cartItem.product.realSaleStocksQuantity %}
-                                                    {% else %}
-                                                        {% set maxQuantity = cartItem.product.realNonSaleStocksQuantity %}
-                                                    {% endif %}
-                                                    {{ form_widget(form.quantities[cartItem.id], { attr: {
-                                                        class: 'form-input-spinbox__input input-no-style js-spinbox-input',
-                                                        'data-spinbox-min': cartItem.product.realMinimumAmount,
-                                                        'data-spinbox-step': cartItem.product.amountMultiplier,
-                                                        'data-spinbox-max': maxQuantity
-                                                    }}) }}
-                                                    <div class="btn-no-style form-input-spinbox__btn js-spinbox-plus"><i class="svg svg-plus"></i></div>
-                                                    <div class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus"><i class="svg svg-minus"></i></div>
-                                                </span>
-                                                <a
-                                                    href="{{ url('front_cart_delete', {cartItemId: cartItem.id, _token: csrf_token('front_cart_delete_' ~ cartItem.id)}) }}"
-                                                    class="table-cart__cell__remove js-cart-item-remove-button"
-                                                >
-                                                    {{ 'Odstranit'|trans }}
-                                                </a>
+                                                <div class="position-relative">
+                                                    <span class="form-input-spinbox form-input-spinbox--secondary js-spinbox">
+                                                        {% if cartItem.saleItem %}
+                                                            {% set maxQuantity = cartItem.product.realSaleStocksQuantity %}
+                                                        {% else %}
+                                                            {% set maxQuantity = cartItem.product.realNonSaleStocksQuantity %}
+                                                        {% endif %}
+                                                        {{ form_widget(form.quantities[cartItem.id], { attr: {
+                                                            class: 'form-input-spinbox__input input-no-style js-spinbox-input',
+                                                            'data-spinbox-min': cartItem.product.realMinimumAmount,
+                                                            'data-spinbox-step': cartItem.product.amountMultiplier,
+                                                            'data-spinbox-max': maxQuantity
+                                                        }}) }}
+                                                        <div class="btn-no-style form-input-spinbox__btn js-spinbox-plus"><i class="svg svg-plus"></i></div>
+                                                        <div class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus"><i class="svg svg-minus"></i></div>
+                                                    </span>
+                                                    <a
+                                                        href="{{ url('front_cart_delete', {cartItemId: cartItem.id, _token: csrf_token('front_cart_delete_' ~ cartItem.id)}) }}"
+                                                        class="table-cart__cell__remove js-cart-item-remove-button"
+                                                    >
+                                                        {{ 'Odstranit'|trans }}
+                                                    </a>
+                                                </div>
                                             </div>
                                             <div class="table-cart__cell table-cart__cell--price js-cart-item-total-price">
                                                 <div class="table-cart__cell__price-primary">
