--- a/templates/Front/Content/ContactForm/contactForm.html.twig
+++ b/templates/Front/Content/ContactForm/contactForm.html.twig
@@ -21,7 +21,7 @@
 <div class="wrap-article__row">
     <div class="wrap-article__row__full">
         <div class="form-line">
-            <div class="form-line__input form-line__input--full">
+            <div class="form-line__input">
                 <label class="input-label" for="{{ form.message.vars.id }}">
                     {{ 'Message'|trans }}
                 </label>
