--- a/assets/styles/frontend/common/components/form/line.less
+++ b/assets/styles/frontend/common/components/form/line.less
@@ -6,70 +6,12 @@
 @form-line-label-field-gap-mobile: 5px;
 
 .form-line {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     margin: 0 0 @form-line-margin-bottom;
     padding: 0;
 
-    @media @query-lg {
-        flex-direction: row;
-    }
-
     &__input {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
         position: relative;
-        width: 100%;
-
-        @media @query-lg {
-            max-width: @form-line-width-input;
-        }
-
-        @media @query-vl {
-            max-width: @form-line-width-input-small;
-        }
-
-        @media @query-xl {
-            max-width: @form-line-width-input;
-        }
-
-        &--full {
-            max-width: 100%;
-            width: 100%;
-        }
-    }
-
-    &__error {
-        display: flex;
-        align-items: center;
-        position: relative;
-        width: 100%;
-        padding-left: @input-label-width;
-        margin-top: 5px;
-
-        font-size: 0;
-
-        @media @query-lg {
-            width: calc(~"@{calc-base} - @{form-line-width-input}");
-            padding-left: 20px;
-            margin-top: 0;
-        }
-
-        @media @query-vl {
-            width: calc(~"@{calc-base} - @{form-line-width-input-small}");
-        }
-
-        @media @query-xl {
-            padding-left: @input-label-width;
-            width: calc(~"@{calc-base} - @{form-line-width-input}");
-        }
-
-        &--full {
-            width: 100%;
-            padding-left: @input-label-width;
-        }
+        margin-bottom: 5px;
     }
 
     &__info {
