--- a/assets/styles/frontend/common/core/form/custom-inputs.less
+++ b/assets/styles/frontend/common/core/form/custom-inputs.less
@@ -1,6 +1,6 @@
 @custom-inputs-margin-left: 30px;
 @custom-inputs-filter-margin-left: 25px;
-@custom-inputs-font-size: @font-size;
+@custom-inputs-font-size: @font-size-small;
 @custom-inputs-icon-size: 20px;
 @custom-inputs-link-color: @color-base;
 @custom-inputs-link-color-hover: @color-orange;
@@ -27,8 +27,13 @@ input[type=checkbox].css-radio, input[type=radio].css-radio {
         line-height: @custom-inputs-icon-size;
         min-height: @custom-inputs-icon-size;
 
-        font-size: @custom-inputs-font-size;
+        font-size: @font-size-mobile;
+        font-family: @font-alt;
         cursor: pointer;
+
+        @media @query-lg {
+            font-size: @custom-inputs-font-size;
+        }
 
         &:before {
             content: "";
@@ -43,6 +48,13 @@ input[type=checkbox].css-radio, input[type=radio].css-radio {
             background-position: left top;
             background-size: 3*@custom-inputs-icon-size 2*@custom-inputs-icon-size;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), inset 0 -1px 2px rgba(0, 0, 0, 0.3);
+        }
+
+        &.css-checkbox__image--vertical {
+            &:before {
+                top: 50%;
+                transform: translateY(-50%);
+            }
         }
 
         &:hover {
