--- a/templates/Front/Content/Registration/register.html.twig
+++ b/templates/Front/Content/Registration/register.html.twig
@@ -16,16 +16,16 @@
             {{ form_start(form) }}
                 <div class="wrap-article__row">
                     <div class="wrap-article__row__half">
-                        {{ form_row(form.customerUserData.firstName, { label: 'First name'|trans, attr: { class: 'form-line__input--full'}, errors_attr: { class: 'form-error--under' } }) }}
+                        {{ form_row(form.customerUserData.firstName, { label: 'First name'|trans, errors_attr: { class: 'form-error--under' } }) }}
                     </div>
                     <div class="wrap-article__row__half">
-                        {{ form_row(form.customerUserData.lastName, { label: 'Last name'|trans, attr: { class: 'form-line__input--full'}, errors_attr: { class: 'form-error--under' }}) }}
+                        {{ form_row(form.customerUserData.lastName, { label: 'Last name'|trans, errors_attr: { class: 'form-error--under' }}) }}
                     </div>
                 </div>
                 <div class="wrap-article__row">
                     <div class="wrap-article__row__full">
                         <div class="form-line">
-                            <div class="form-line__input form-line__input--full">
+                            <div class="form-line__input">
                                 <label class="input-label" for="{{ form.customerUserData.email.vars.id }}">
                                     {{ 'E-mail'|trans }}
                                 </label>
@@ -41,7 +41,6 @@
                     <div class="wrap-article__row__half">
                         {{ form_row(form.customerUserData.password.first, {
                             label: 'Password'|trans,
-                            attr: { class: 'form-line__input--full'},
                             errors_attr: { class: 'form-error--under' },
                             icon: {
                                 class: 'in-icon in-icon--info js-tooltip',
@@ -50,7 +49,7 @@
                         }) }}
                     </div>
                     <div class="wrap-article__row__half">
-                        {{ form_row(form.customerUserData.password.second, { label: 'Password again'|trans, attr: { class: 'form-line__input--full'}, errors_attr: { class: 'form-error--under' } }) }}
+                        {{ form_row(form.customerUserData.password.second, { label: 'Password again'|trans, errors_attr: { class: 'form-error--under' } }) }}
                     </div>
                 </div>
 
